RESOLVED FIXED 279930
[WPEPlatform] Input methods do not work
https://bugs.webkit.org/show_bug.cgi?id=279930
Summary [WPEPlatform] Input methods do not work
contact
Reported 2024-09-18 16:05:45 PDT
Created attachment 472595 [details] Fix for missing IME implementation Currently IME seems to be missing the `synthesizeCompositionKeyPress` implementation: https://github.com/WebKit/WebKit/blob/86dc22fbb4b7f2d718008ecf8545701f98c50cc9/Source/WebKit/UIProcess/API/wpe/WPEWebViewPlatform.cpp#L438-L441 As a result, IME popups correctly receive focus, but the `commit` signal to submit text never forwards that text into the selected text input area. I've attached a patch that fixes it for me, which seem pretty straight-forward.
Attachments
Fix for missing IME implementation (3.14 KB, patch)
2024-09-18 16:05 PDT, contact
no flags
[2] Fix for IME implementation (3.14 KB, patch)
2024-09-19 14:59 PDT, contact
no flags
[3] Fix missing IME key press implementation (3.63 KB, patch)
2024-09-19 16:03 PDT, contact
ews-feeder: commit-queue-
[4] Fix missing IME key press implementation (3.07 KB, patch)
2024-09-19 18:50 PDT, contact
no flags
contact
Comment 1 2024-09-19 14:59:27 PDT
Created attachment 472604 [details] [2] Fix for IME implementation
contact
Comment 2 2024-09-19 16:03:47 PDT
Created attachment 472605 [details] [3] Fix missing IME key press implementation
contact
Comment 3 2024-09-19 18:50:46 PDT
Created attachment 472609 [details] [4] Fix missing IME key press implementation
Adrian Perez
Comment 4 2024-09-24 00:42:18 PDT
EWS
Comment 5 2024-09-24 06:06:01 PDT
Committed 284155@main (a4052b199e60): <https://commits.webkit.org/284155@main> Reviewed commits have been landed. Closing PR #34153 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.