[WPEPlatform] Input methods do not work https://bugs.webkit.org/show_bug.cgi?id=279930

Reviewed by Carlos Garcia Campos.

Implement ViewPlatform::synthesizeCompositionKeyPress(), which was
missing implementation for WPE.

* Source/WebKit/Shared/NativeWebKeyboardEvent.h:
* Source/WebKit/Shared/wpe/NativeWebKeyboardEventWPE.cpp:
(WebKit::NativeWebKeyboardEvent::NativeWebKeyboardEvent): Add helper
constructor, needed by ::synthesizeCompositionKeyPress().
* Source/WebKit/UIProcess/API/wpe/WPEWebViewPlatform.cpp:
(WKWPE::ViewPlatform::synthesizeCompositionKeyPress): Implement.

Canonical link: https://commits.webkit.org/284155@main